add some explanation

--- a/notebooks/cantarell.Rmd
+++ b/notebooks/cantarell.Rmd
@@ -11,10 +11,14 @@ url_any <- make_search_url(query = "Cantarell", how = "any")
 get_papers_count(url_any)
 ```
 
+Papers that differ in how "cantarell" is spelled:
+
 ```{r}
 url_any <- make_search_url(query = "Cantarel", how = "any")
 get_papers_count(url_any)
 ```
+
+Only one paper with Cantarell and Optimization
 
 ```{r}
 library(petro.One)
@@ -22,11 +26,15 @@ url_any <- make_search_url(query = "Cantarell optimization", how = "all")
 get_papers_count(url_any)
 ```
 
+UK english spelling of "optimization":
+
 ```{r}
 library(petro.One)
 url_any <- make_search_url(query = "Cantarell optimisation", how = "all")
 get_papers_count(url_any)
 ```
+
+Any keywords "network"
 
 ```{r}
 library(petro.One)
@@ -35,8 +43,13 @@ get_papers_count(url_any)
 ```
 
 ## Provide keywords
+In this example we provide a list of keywords as a text list - later converted to a dataframe-, that is used by petro.One to iterate through that list of keywords.
+
 
 ```{r}
+library(petro.One)
+
+# provide the list of keywords
 keywords <- "    
     Cantarell
     Cantarell optimization
@@ -51,6 +64,8 @@ keywords <- "
     Cantarell gain
     Cantarell pipesim
 "
+# convert the text to a dataframe
+#
 # keywords
 # read.table(text = keywords, header = FALSE, allowEscapes = FALSE)
 # read text table and split rows at carriage return
@@ -61,20 +76,23 @@ kw_tbl
 ```
 
 
-
-```{r}
+```{r rows.print = 20}
 rec <- vector("list")
 i <- 1
 for (k in kw_tbl$V1) {
     url_all <- make_search_url(query = k, how = "all")
     count <- get_papers_count(url_all)
     rec[[i]] <- list(keyword = k, count = count)
-    cat(k, count, "\n")
+    cat(sprintf("%30s %5d \n", k, count))
     i <-  i + 1
     Sys.sleep(5)
 }
 data.table::rbindlist(rec)
 ```
+
+
+
+
 
 ```{r}
 library(petro.One)
