--- a/vignettes/joining_keywords.Rmd
+++ b/vignettes/joining_keywords.Rmd
@@ -58,6 +58,6 @@ lesser  <- c("algorithm")
 another <- c("data-mining")
 more    <- c("data-driven")
 
-p.df <- join_keywords(major, minor, lesser, another, more, get_papers = TRUE, sleep = 1)
+p.df <- join_keywords(major, minor, lesser, another, more, get_papers = TRUE)
 p.df
 ```
