--- a/notebooks/03-query_to_dataframe/read_authors.Rmd
+++ b/notebooks/03-query_to_dataframe/read_authors.Rmd
@@ -12,22 +12,22 @@ my_url <- make_search_url(query = "deepwater",
 
 webpage <- xml2::read_html(my_url)
 
-author1_data_html <- html_nodes(webpage, '.result-item-author:nth-child(1)')
-author1_data_txt <- html_text(author1_data_html)
+author1_data_html <- rvest::html_nodes(webpage, '.result-item-author:nth-child(1)')
+author1_data_txt <- rvest::html_text(author1_data_html)
 author1_data <- trimws(gsub("\n", "", author1_data_txt))
 author1_data
 ```
 
 ```{r}
-author2_data_html <- html_nodes(webpage, '.result-item-author:nth-child(2)')
-author2_data_txt <- html_text(author2_data_html)
+author2_data_html <- rvest::html_nodes(webpage, '.result-item-author:nth-child(2)')
+author2_data_txt <- rvest::html_text(author2_data_html)
 author2_data <- trimws(gsub("\n", "", author2_data_txt))
 author2_data
 ```
 
 ```{r}
-author3_data_html <- html_nodes(webpage, '.result-item-author:nth-child(3)')
-author3_data_txt <- html_text(author3_data_html)
+author3_data_html <- rvest::html_nodes(webpage, '.result-item-author:nth-child(3)')
+author3_data_txt <- rvest::html_text(author3_data_html)
 author3_data <- trimws(gsub("\n", "", author3_data_txt))
 author3_data
 ```
@@ -41,8 +41,8 @@ my_url <- make_search_url(query = "deepwater",
 
 webpage <- xml2::read_html(my_url)
 
-authors_data_html <- html_nodes(webpage, '.result-item-authors')
-authors_data_txt <- html_text(authors_data_html)
+authors_data_html <- rvest::html_nodes(webpage, '.result-item-authors')
+authors_data_txt <- rvest::html_text(authors_data_html)
 authors_data <- trimws(gsub("\n", "", authors_data_txt))
 authors_data
 ```
